--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-  background-color: rgb(90, 5, 5);
+  background-image: repeating-conic-gradient(maroon 10%, rgb(1, 1, 1) 20%);
   font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 h1 {
@@ -9,6 +9,8 @@ h1 {
   color: rgb(90, 5, 5);
   font-size: 26px;
   line-height: 1.6;
+  margin:0;
+  padding:0;
 }
 
 h2 {
@@ -16,6 +18,8 @@ h2 {
   color: rgb(0, 0, 0);
   font-size: 26px;
   line-height: 1.6;
+  margin:0;
+  padding:0;
 }
 
 a:link {
@@ -45,7 +49,7 @@ h3 {
 }
 
 .card-white {
-  background-color: rgba(211, 183, 183, 0.79);
+  background-color: rgba(211, 183, 183, 0.85);
   padding: 40px;
   box-shadow: 10px 10px 30px rgba(0,0,0,0.6);
   border-radius: 20px;
@@ -55,6 +59,7 @@ h3 {
 
 .img-circle {
   border-radius: 30%;
+  padding: 20px;
 }
 
 h3 {
@@ -69,6 +74,10 @@ h3 {
 
 ul {
   list-style-type: none;
+}
+
+p {
+  font-size: 18px;
 }
 
 @media (max-width: 960px) {
